# radfoam-ipu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debugchains.txt  main.cpp  utils.cmake
codelets/: codelets.cpp
docker/: Dockerfile  build.sh  run.sh
include/: KDTreeManager.hpp  RadiantFoamIpuBuilder.hpp  radfoam_types.hpp
include/geometry/: primitives.hpp
include/io/: PartitionIO.hpp  hdf5_types.hpp
include/ipu/: ipu_primitives.hpp  rf_config.hpp  tile_config.hpp
include/remote_ui/: InterfaceServer.hpp
include/util/: cmdline_options.hpp  debug_utils.hpp  ui_state.hpp
scene_partitioning/: README.md  kdtree_partition_viewer.py  requirements.txt  scene_partitioning.ipynb
scene_partitioning/scripts/: evaluate.py  hdf5_writer.py  helpers.py  kdtree.py  octree.py
src/: RadiantFoamIpuBuilder.cpp  main.cpp
src/codelets/: codelets.cpp  ray_generator.cpp  ray_router.cpp  ray_tracer.cpp  tracing_codelet.cpp
src/io/: PartitionIO.cpp
src/util/: cmdline_options.cpp
